random maze generation and go